Working unit and integration test report from jacoco